Fix forms bug: Setting a text box as readonly allows changes to be made

BUG:278419

Extra:
*Properly updated context menu when read-only flag is set for line edits and text boxes