kexi/plugins/forms/widgets/kexidbtextedit.cpp
@@ -1,6 +1,6 @@
 /* This file is part of the KDE project
    Copyright (C) 2005 Cedric Pasteur <cedric.pasteur@free.fr>
-   Copyright (C) 2004-2009 Jarosław Staniek <staniek@kde.org>
+   Copyright (C) 2004-2012 Jarosław Staniek <staniek@kde.org>
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU Library General Public
@@ -124,7 +124,7 @@ void KexiDBTextEdit::slotTextChanged()
         return;
 
     if (m_length > 0) {
-        if (toPlainText().length() > m_length) {
+        if (toPlainText().length() > (int)m_length) {
             setPlainText(toPlainText().left(m_length));
             moveCursorToEnd();
         }
@@ -217,12 +217,11 @@ void KexiDBTextEdit::paintEvent(QPaintEvent *pe)
     KexiDBTextWidgetInterface::paint(this, &p, toPlainText().isEmpty(), alignment(), hasFocus());
 }
 
-QMenu * KexiDBTextEdit::createPopupMenu(const QPoint & pos)
+void KexiDBTextEdit::contextMenuEvent(QContextMenuEvent *e)
 {
-    Q_UNUSED(pos);
-    QMenu *contextMenu = KTextEdit::createStandardContextMenu();//pos);
-    m_menuExtender.createTitle(contextMenu);
-    return contextMenu;
+    QMenu *menu = createStandardContextMenu();
+    m_menuExtender.exec(menu, e->globalPos());
+    delete menu;
 }
 
 void KexiDBTextEdit::undo()
